# uk-fca-financial-assistant

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISION_LOG.md  Makefile  README.md  RESUMABILITY.md  lessons.md  pyproject.toml
.claude/: sessions.md  settings.json
.claude/hooks/: post_edit.sh  pre_bash.sh  pre_write.sh  session_start.sh
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  REGULATORY_NOTES.md
src/ukfca/: __init__.py  constants.py  schemas.py
src/ukfca/data/: __init__.py
src/ukfca/eval/: __init__.py
src/ukfca/rag/: __init__.py
src/ukfca/serving/: __init__.py
src/ukfca/training/: __init__.py
tests/unit/: test_sanity.py
