[project]
name = "ukfca"
version = "0.1.0"
description = "Fine-tuned open-weight LLM for UK retail financial questions, demonstrating engagement with the FCA advice/guidance boundary. Portfolio project, not FCA-authorised."
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "Apache-2.0" }
authors = [{ name = "rajo69" }]
keywords = ["llm", "fine-tuning", "fca", "uk", "portfolio"]

dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
    "types-pyyaml>=6.0",
]
data = [
    "datasets>=2.20",
    "jsonlines>=4.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "tenacity>=8.5",
]
eval = [
    "anthropic>=0.34",
    "openai>=1.40",
    "ragas>=0.1.21",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "wandb>=0.17",
]
rag = [
    "qdrant-client>=1.11",
    "sentence-transformers>=3.0",
]
serving = [
    "fastapi>=0.112",
    "uvicorn[standard]>=0.30",
    "langfuse>=2.45",
]

# NOTE: Training dependencies (unsloth, trl, peft, transformers, torch,
# bitsandbytes, accelerate) are intentionally NOT installed locally.
# They live in the Kaggle runtime environment only — see scripts/
# kaggle kernel manifests in Phase 9. This keeps the local dev env
# lean and fast on a Windows laptop.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukfca"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "checkpoints", "data/raw", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "PT"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_reexport = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["wandb.*", "ragas.*", "qdrant_client.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/ukfca --cov-report=term-missing"
markers = [
    "integration: integration tests (run with -m integration)",
    "slow: slow tests",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
